--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_dom_ui
 description: "A new universal Flutter Web Seo package."
 version: 0.0.1
-homepage:
+homepage: https://github.com/nahidhasan-dev/flutterdomui
 
 environment:
   sdk: ^3.7.2
@@ -16,5 +16,3 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-
-flutter:
